<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".caloriesdiary.CaloriesExerciseView">

   >

    <LinearLayout
        android:layout_width="398dp"
        android:layout_height="491dp"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/tableLayout3"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="16dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="105dp">

                <TextView
                    android:id="@+id/lblexsummary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/exercise_recommendation"
                    android:textSize="30sp"
                    tools:layout_editor_absoluteX="111dp"
                    tools:layout_editor_absoluteY="499dp" />
            </TableRow>
        </TableLayout>

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginBottom="8dp"
            tools:ignore="MissingConstraints">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="1">

                <TextView
                    android:id="@+id/lblCaloriesDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/total_calories"
                    android:textSize="24sp"
                    tools:ignore="MissingConstraints"
                    android:layout_weight="0.5"
                    tools:layout_editor_absoluteY="84dp" />

                <TextView
                    android:id="@+id/lbltotalcalories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:layout_weight="0.5"
                    android:text="Calories Count"
                    android:textSize="24sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="100dp"
                    tools:layout_editor_absoluteY="113dp" />

            </TableRow>

        </TableLayout>

        <TableLayout
            android:id="@+id/tableLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="MissingConstraints">

            <TableRow
                android:layout_width="331dp"
                android:layout_height="43dp">

                <TextView
                    android:id="@+id/lblbriskwalk"
                    android:layout_width="159dp"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/brisk_walking"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="38dp"
                    tools:layout_editor_absoluteY="645dp" />

                <TextView
                    android:id="@+id/lblbwduration"
                    android:layout_width="110dp"
                    android:layout_height="match_parent"
                    android:padding="5dip"
                    android:text="@string/duration"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="28dp" />

                <TextView
                    android:id="@+id/lblmin0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:text="@string/minutes"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="501dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lblYoga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/yoga"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="49dp"
                    tools:layout_editor_absoluteY="28dp" />

                <TextView
                    android:id="@+id/lblyogaduration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/duration"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="28dp" />

                <TextView
                    android:id="@+id/lblmin1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:text="@string/minutes"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="276dp"
                    tools:layout_editor_absoluteY="501dp" />
            </TableRow>

            <TableRow>

                <TextView
                    android:id="@+id/lblrun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/running"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="38dp"
                    tools:layout_editor_absoluteY="645dp" />

                <TextView
                    android:id="@+id/lblrunduration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/duration"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="643dp" />

                <TextView
                    android:id="@+id/lblmin2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:text="@string/minutes"
                    android:textSize="18sp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="82dp">

                <TextView
                    android:id="@+id/lblswim"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/swimming"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="38dp"
                    tools:layout_editor_absoluteY="598dp" />

                <TextView
                    android:id="@+id/lblswimduration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/duration"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="596dp" />

                <TextView
                    android:id="@+id/lblmin3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:text="@string/minutes"
                    android:textSize="18sp" />
            </TableRow>

            <TableRow
                android:layout_width="301dp"
                android:layout_height="68dp">

                <TextView
                    android:id="@+id/lblcyc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/cycling"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="35dp"
                    tools:layout_editor_absoluteY="688dp" />

                <TextView
                    android:id="@+id/lblcycduration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dip"
                    android:text="@string/duration"
                    android:textSize="18sp"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="50dp"
                    tools:layout_editor_absoluteY="686dp" />

                <TextView
                    android:id="@+id/lblmin4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="3dip"
                    android:text="@string/minutes"
                    android:textSize="18sp"></TextView>
            </TableRow>
        </TableLayout>
    </LinearLayout>

</RelativeLayout>